# python-mpi

./: .env.example  .gitignore  README.md  app.py  machines  primos.py  pyproject.toml  requirements.txt  run.sh  use.txt
.github/workflows/: ci.yml
common/: models.py  serializer.py
master/: app.py  db.py
master/templates/: dashboard.html
tests/: conftest.py  test_algorithms.py  test_api.py  test_db.py
worker/: coordinator.py
worker/algorithms/: pi_monte_carlo.py  primes.py  stress.py
